--- a/src/style.css
+++ b/src/style.css
@@ -18,16 +18,25 @@
   --md-ref-palette-primary100: #ffffff;
 
   --md-ref-palette-neutral0: #000000;
+  --md-ref-palette-neutral4: #0c0e13;
+  --md-ref-palette-neutral6: #111318;
   --md-ref-palette-neutral10: #1a1c20;
+  --md-ref-palette-neutral12: #1d1f24;
+  --md-ref-palette-neutral17: #262831;
   --md-ref-palette-neutral20: #2f3135;
+  --md-ref-palette-neutral22: #33363b;
+  --md-ref-palette-neutral24: #37393f;
   --md-ref-palette-neutral30: #46474c;
   --md-ref-palette-neutral40: #5d5f64;
   --md-ref-palette-neutral50: #76777c;
   --md-ref-palette-neutral60: #909196;
   --md-ref-palette-neutral70: #abacb0;
   --md-ref-palette-neutral80: #c7c7cc;
+  --md-ref-palette-neutral85: #d5d5da;
+  --md-ref-palette-neutral87: #dddde2;
   --md-ref-palette-neutral90: #e3e3e8;
   --md-ref-palette-neutral95: #f1f1f6;
+  --md-ref-palette-neutral98: #fafaff;
   --md-ref-palette-neutral99: #fdfdf9;
   --md-ref-palette-neutral100: #ffffff;
 
@@ -367,16 +376,25 @@
   --md-ref-palette-primary100: #ffffff;
 
   --md-ref-palette-neutral0: #000000;
+  --md-ref-palette-neutral4: #0c0e13;
+  --md-ref-palette-neutral6: #111318;
   --md-ref-palette-neutral10: #1a1c20;
+  --md-ref-palette-neutral12: #1d1f24;
+  --md-ref-palette-neutral17: #262831;
   --md-ref-palette-neutral20: #2f3135;
+  --md-ref-palette-neutral22: #33363b;
+  --md-ref-palette-neutral24: #37393f;
   --md-ref-palette-neutral30: #46474c;
   --md-ref-palette-neutral40: #5d5f64;
   --md-ref-palette-neutral50: #76777c;
   --md-ref-palette-neutral60: #909196;
   --md-ref-palette-neutral70: #abacb0;
   --md-ref-palette-neutral80: #c7c7cc;
+  --md-ref-palette-neutral85: #d5d5da;
+  --md-ref-palette-neutral87: #dddde2;
   --md-ref-palette-neutral90: #e3e3e8;
   --md-ref-palette-neutral95: #f1f1f6;
+  --md-ref-palette-neutral98: #fafaff;
   --md-ref-palette-neutral99: #fdfdf9;
   --md-ref-palette-neutral100: #ffffff;
 
